# in-silico-fate-mapping

./: .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
src/in_silico_fate_mapping/: __init__.py  _reader.py  _widget.py  _writer.py  conftest.py  divergence.py  fast_radius_regression.py  fate_mapping.py  napari.yaml
src/in_silico_fate_mapping/_tests/: test_divergence.py  test_fate_mapping.py  test_io.py  test_widget.py
src/in_silico_fate_mapping/cli/: divergence_cli.py
src/in_silico_photo_manipulation/: __init__.py  _reader.py  _widget.py  _writer.py  divergence.py  fast_radius_regression.py  napari.yaml  photom.py
src/in_silico_photo_manipulation/_tests/: test_divergence.py  test_io.py  test_photom.py  test_reader.py  test_widget.py
src/in_silico_photo_manipulation/cli/: divergence_cli.py
