[metadata]
name = in-silico-fate-mapping

description = Interactive in silico fate mapping from tracking data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/royerlab/in-silico-fate-mapping
author = Jordao Bragantini
author_email = jordao.bragantini@czbiohub.org
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/royerlab/in-silico-fate-mapping/issues
    Documentation = https://github.com/royerlab/in-silico-fate-mapping#README.md
    Source Code = https://github.com/royerlab/in-silico-fate-mapping
    User Support = https://github.com/royerlab/in-silico-fate-mapping/issues

[options]
packages = find:
install_requires =
    numpy
    pandas
    scikit-learn
    zarr
    magicgui
    qtpy
    napari
    click

python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    in-silico-fate-mapping = in_silico_fate_mapping:napari.yaml
console_scripts =
    div = in_silico_fate_mapping.cli.divergence_cli:div

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    pyqt5


[options.package_data]
* = *.yaml
